Misc changes in tests